--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,6 +14,9 @@ html {
     font-family: 'Raleway', sans-serif
 }
 
+body {
+    overflow-x: hidden;
+}
 header {
     letter-spacing: .2rem;
 }
@@ -53,6 +56,7 @@ nav {
 nav .navRight ul{
     display: flex;
 }
+
 nav .navRight .navbar_menu{
     margin-left: 2rem;
     text-transform: uppercase;
@@ -65,6 +69,12 @@ nav .navRight .navbar_menu:hover{
     border-bottom: 1px solid crimson;
     color: crimson;
     transition: .5s;
+}
+
+#burger{
+    color: white;
+    font-size: 1.5rem;
+    display: none;
 }
 
 /* hero section */
@@ -167,4 +177,33 @@ nav .navRight .navbar_menu:hover{
         color: crimson;
         font-weight: 500;
     }
+}
+
+/* responsive */
+@media only screen and (max-width: 910px){
+    #burger{
+        display: block;
+        cursor: pointer;
+    }
+
+    nav .navRight ul {
+        position:fixed;
+        width: 100%;
+        height: 30vh;
+        background: #262626;
+        font-size: 1rem;
+        left: -100%;
+        top: 3.5rem;
+        text-align: center;
+        display: none;
+        line-height: 4rem;
+        transition: all .5s;
+    }
+
+    .navRight ul.show{
+        display: block;
+        left: 0;
+        transition: .5s;
+    }
+
 }
